# FoxBot

./: .dockerignore  .gitignore  .pylintrc  CONFIG_GUIDE.md  Dockerfile  README.md  admin_cmds.py  analysis.py  api_stuff.py  cool_logging.py  custom_logging.py  db_stuff.py  docker-compose.yml  fun_cmds.py  hardlockdown.py  help.py  help_cmd.py  main.py  nasa_stuff.py  one_use_cmds.py  pyproject.toml  reaction_roles.py  requirements.txt  restart.py  suggest.py  supervise.sh  utils.py
bot_commands/: admin_cmds.py  analysis.py  dev_cmds.py  echo.py  fun_cmds.py  suggest.py
cogs/: adev_cmds.py  adev_cmds_utils.py  admin_cmds.py  admin_cmds_utils.py  api_cmds.py  api_cmds_utils.py  auction.py  config_cmds.py  config_cmds_utils.py  counting.py  counting_utils.py  crime.py  ctf.py  currency_cmds.py  currency_cmds_admin.py  dev_cmds.py  fun_cmds.py  fun_cmds_utils.py  gambling_cmds.py  member_events.py  member_events_utils.py  message_events.py  message_events_utils.py  server_backup.py  server_backup_utils.py  sever_backup.py  voice_events.py  voice_events_utils.py  xp.py  xp_utils.py
command_utils/: CContext.py  analysis.py  checks.py  embed_util.py  gambling_utils.py  suggest.py  vt_utils.py
commands/: admin_cmds.py  analysis.py  echo.py  restart.py  suggest.py
config/: blacklist_manager.py  bot_config.py
currency/: _special.py  collector.py  curr_config.py  curr_utils.py  currency_types.py  gambling_config.py  job_utils.py  jobs.py  perks.py  shop_items.py
custom_logging/: voice_log.py
type_stuff/: permission_types.py
utils/: api_stuff.py  cloudflare_stuff.py  (+4 more)
(+4 files in other folders)
